Created the Card component and added to the Books page

--- a/src/components/Dashboard/Books/Books.css
+++ b/src/components/Dashboard/Books/Books.css
@@ -1,6 +1,11 @@
+.books-title{
+    text-align: center;
+}
+
 .books-wrapper{
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
+    justify-content: center;
 }
 
