--- a/src/components/Dashboard/Card/Card.css
+++ b/src/components/Dashboard/Card/Card.css
@@ -1,23 +1,37 @@
 .card{
     display: flex;
     flex-direction: column;
-    width: 22%;
-    border: 1px solid black;
-    height: 300px;
+    width: 300px;
+    background: #f2f2f2;
+    overflow: hidden;
+    border-radius: 20px;
+    cursor: pointer;
+    box-shadow: 0 0 20px 8px #d0d0d0;
+    height: 350px;
     padding: 10px;
-    margin: 10px;
+    margin: 10px 20px;
+    font-family: 'Roboto', sans-serif;
 }
+
+
 .title{
     text-align: center;
+    padding-bottom: 0.5rem;
+    margin-bottom: 0.5rem;
+    border-bottom: 1px solid #fff;
+    font-size: 16px;
+    font-weight: 500;
 }
 
 .poster{
     text-align: center;
+    padding-bottom: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 .poster img{
     width: auto;
-    height: 200px;
+    max-height: 250px;
 }
 
 .author{
