--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,9 +6,53 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  border-bottom: 1px solid #000000;
 }
 
 .logout{
-  height: 30px;
   margin: auto 0;
+  width: 75px;
+  height: 30px;
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  background-color: rgb( 92, 130, 255 );
+  border: 1px solid rgb( 92, 130, 255 );
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+.logout:hover{
+  background-color: rgb( 92, 110, 255 );
+}
+
+.navigation-menu{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.navigation-box{
+  border: 1px solid #33ccff;
+  height: 30px;
+  width: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  cursor: pointer;
+  text-decoration: none;
+  color: #000;
+  background-image:-moz-linear-gradient(left top, #ffffff 0%, #33ccff 100%);
+  background-image:-webkit-linear-gradient(left top, #ffffff 0%, #33ccff 100%);
+  margin-right:  25px;
+}
+
+.navigation-box:hover{
+  transition: all 0.5s;
+  box-shadow: inset 0 0 0 1px #7f7f7f;
+  font-size: 16px;
+  border: none;
 }
